# deltachat-desktop

./: .babelrc  .browserslistrc  .dockerignore  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .log.convention.ignore  .mocharc.json  .npmrc  .prettierignore  .prettierrc.yml  .testcafe-electron-rc  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile.e2e  Jenkinsfile  README.md  RELEASE.md  SECURITY.md  UPGRADING.md  cliff.toml  commitlint.config.js  docker-compose.e2e-tests.yml  docker-compose.e2e.yml  docker-compose.yml  drag.search  electron-builder.js  electron-builder.json5  electron-builder.yml  eslint.config.js  files.txt  flake.nix  index.js  old.package.json  (+14 more)
.circleci/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  mergeable.yml
.husky/: commit-msg
.tx/: config
.zed/: settings.json
Docker/: docker-compose.yml
_locales/: _experimental_en.json  _languages.json  _untranslated_en.json  _untranslated_en.json.orig  ar.xml  az.xml  bg.xml  bqi.xml  ca.json  ca.xml  ckb.xml  cs.xml  da.json  da.xml  de.json  de.xml  el.xml  en.json  en.xml  eo.json  eo.xml  es.json  es.xml  et.xml  eu.json  eu.xml  fa.xml  fi.xml  fr.json  fr.xml  gl.xml  hr.json  hr.xml  hu.json  hu.xml  id.xml  it.json  it.xml  ja_JP.json  ja_JP.xml  (+45 more)
build-agent/: Dockerfile
ci_scripts/: build-image.sh  build-package.sh  build_sasl.sh  ci-build.sh  ci-prelude.sh  ci-test.sh  config.yml  pkg-build-prelude.sh  pkg-build.sh
conversations/: README.md  index.js  package.json  tsconfig.json
docker/: Dockerfile
docs/: APPX_TESTING.md  ARCHITECTURE.md  CLI_FLAGS.md  DEVELOPMENT.md  E2E-TESTING.md  KEYBINDINGS.md  LOGGING.md  NOTIFICATION_SOUND.md  RELEASE_WORKFLOW.md  STYLES.md  THEMES.md  TROUBLESHOOTING.md  UPDATE_CORE.md  WEBXDC.md
images/: licenses
(+1877 files in other folders)
