[workspace]
resolver = "2"
members = ["packages/target-tauri/src-tauri", "packages/target-tauri/translationfn"]

# Always optimize dependencies.
[profile.dev.package."*"]
opt-level = "z"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true

[patch.crates-io]
tauri = { git = "https://github.com/Simon-Laux/tauri", branch = "add-is-always-on-top" }
tauri-build = { git = "https://github.com/Simon-Laux/tauri", branch = "add-is-always-on-top" }
