[workspace]
resolver = "2"
members = ["packages/target-tauri/src-tauri"]

# Always optimize dependencies.
[profile.dev.package."*"]
opt-level = "z"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true

[patch.crates-io]
tauri = { git = "https://github.com/Simon-Laux/tauri", branch = "apple_allow_link_preview" }
tauri-build = { git = "https://github.com/Simon-Laux/tauri", branch = "apple_allow_link_preview" }
wry = { git = "https://github.com/Simon-Laux/wry", branch = "apple_allow_link_preview" }
